        * Extract the tcl++ and exception libs so they can be centrally
          maintained.
3.4-001
	* Update AC_INIT to provide version number.
	* Add some tests to m4 and use them there instead of in
	configure.ac
	* Set up to use Jenkins CI server.
        * Only let the cppunit tests that don't need a display survive.
        * Properly integrate the V1729 FADC in VMUSB's spectclSetup.tcl
          file.
        * Fix error in vmusb spectclSetup.tcl typo on V1x90 configuration
3.4-002
	* Bug #2100 - gates on m2 spectra incorrectly convert their points.
        * Issue #2101 - Axis definitions for m2 and gd spectra are not clear.
        * Feature #2102 Want to display gates on m2 spectra.
3.4-003
	* Feature #2103 - Allow users to hide the gates on displayed spectra
          Spectra->Hide Gates and then refresh the menu is a toggle button.
        * Feature #1484 - Make work with Tcl 8.6.
	* Fix error in 11 ring format helper - was not getting the runnumber properly.
        * Remove clear command from new Tkcon so it does not interfere with 
          SpecTcl's.
3.4-004
	* Factor in the daqroot preference in finding ringselector.
	* Figure out if ringselector supports --non-blocking and
          if so turn it on.
        * Make strip chart spectra able to do 64 bit shifts.
        * Fix error in displaying gates on 2dsum spectra: was the case that all but
          gates on the first two parameters were displayed flipped.
        * Fix error in compound get visual editor - was calling a deprecated browser
          method.
3.4-005
       * Feature #3531 - add version command.
       * Feature #3532 - add scontents command.
       * Feature #3538 - add compress package with deflate/inflate commands.

3.4-006
      * Feature #4192, Bug #4897 - All variables that can be set in 
        SpecTclInit.tcl now have traces established on them that make it a
        Tcl script error to modify them after SpecTclInit.tcl has been 
        run.