@@ -1064,3 +1064,8 @@ November 30-?? 2011
         SpecTclInit.tcl now have traces established on them that make it a
         Tcl script error to modify them after SpecTclInit.tcl has been 
         run.
+      * Bug #4900 - if bind fails in spectrum creation:
+        *  Give meaningful message to the user.
+        *  Delete any spectra the operation may have created
+        *  If there are previously defined spectra with the same name, 
+           re-create them.
